# organization-test

./: .gitignore  Dockerfile  README.md  alembic.ini  check_api.sh  docker-compose.yml  docker-entrypoint.sh  env  pyproject.toml  run_tests_in_container.sh  seed.sql
migrations/: env.py
migrations/versions/: 6bd25e5711db_create_tables.py
orgs_project/: main.py  models.py  repositories.py  schemas.py  services.py
orgs_project/api/v1/: __init__.py  activities.py  buildings.py  organizations.py
orgs_project/core/: config.py  database.py  security.py
tests/: test_read_api2.py
